--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <img src="word.png" width="700" height="400" style="display: block; margin: 0 auto;">
   <p>
     <h2>원수정</h2><h4>20216625</h4>
-    <h4>[주전공] 디지털인문예술전공</h4>
-    <h4>[복수전공] 마케팅커뮤니케이션테크놀로지융합전공</h4>
+    <h4>주전공 | 디지털인문예술전공 <a href=https://sites.google.com/view/dah-hallym/about?authuser=0>[바로가기]</a></h4>
+    <h4>복수전공 | 마케팅커뮤니케이션테크놀로지융합전공 <a href=https://future.hallym.ac.kr/ucomputing/marketing/intro.do>[바로가기]</a></h4>
   </p>
   <p>
     <div id="disqus_thread"></div>
@@ -34,7 +34,6 @@ s.setAttribute('data-timestamp', +new Date());
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-
   </p>
 </body>
 </html>
