--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h2>원수정</h2><h4>20216625</h4>
     <h4>주전공 | 디지털인문예술전공 <a href=https://sites.google.com/view/dah-hallym/about?authuser=0>[바로가기]</a></h4>
     <h4>복수전공 | 마케팅커뮤니케이션테크놀로지융합전공 <a href=https://future.hallym.ac.kr/ucomputing/marketing/intro.do>[바로가기]</a></h4>
-  </p><br>
+  </p><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <audio controls loop>
     <source src="bgm.mp3" type="audio/mpeg">
   </audio>
