--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <body>
       <H3 align=center>
         <SCRIPT LANGUAGE=JAVASCRIPT TYPE="TEXT/JAVASCRIPT">
-      document.write("제 홈페이지의 " + hitCt + " 번째 방문자이시네요.")
+      document.write("방문자 수: " + hitCt )
       //-->
       </SCRIPT>
       </H3>
