--- a/index.html
+++ b/index.html
@@ -28,32 +28,110 @@
   </audio>
 
 
+  <s_sidebar_element>
 
-      <script language="JavaScript">
-      expireDate = new Date
-      expireDate.setMonth(expireDate.getMonth()+6)
-      hitCt = eval(cookieVal("pageHit"))
-      hitCt++
-      document.cookie = "pageHit="+hitCt+";expires=" + expireDate.toGMTString()
-      function cookieVal(cookieName) {
-        thisCookie = document.cookie.split("; ")
-        for (i=0; i<thisCookie.length; i++) {
-          if (cookieName == thisCookie[i].split("=")[0]) {
-            return thisCookie[i].split("=")[1]
-         }
-      }
-      return 0
-      }
-      </script>
-      <body>
-      <H3 align=center>
-        <SCRIPT LANGUAGE=JAVASCRIPT TYPE="TEXT/JAVASCRIPT">
-      document.write("방문자 수: " + hitCt )
-      //-->
-      </SCRIPT>
-      </H3>
+      <div class="calender">
+          <h3>Calendar</h3>
+          <div class="box"><script language="javascript">
+    var today = new Date();
+    var date = new Date();
+
+    function beforem()
+    {
+        today = new Date(today.getFullYear(), today.getMonth() - 1, today.getDate());
+        build();
+    }
+
+    function nextm()
+    {
+        today = new Date(today.getFullYear(), today.getMonth() + 1, today.getDate());
+        build();
+    }
+
+    function build()
+    {
+        var nMonth = new Date(today.getFullYear(), today.getMonth(), 1);
+        var lastDate = new Date(today.getFullYear(), today.getMonth() + 1, 0);
+        var tbcal = document.getElementById("calendar");
+        var yearmonth = document.getElementById("yearmonth");
+        yearmonth.innerHTML = "<font color=#FFFFFF>" +today.getFullYear() + "년 "+ (today.getMonth() + 1) + "월";
+
+        if(today.getMonth()+1==12)
+        {
+            before.innerHTML=(today.getMonth())+"월";
+            next.innerHTML="1월";
+        }
+        else if(today.getMonth()+1==1)
+        {
+        before.innerHTML="12월";
+        next.innerHTML=(today.getMonth()+2)+"월";
+        }
+        else
+        {
+            before.innerHTML=(today.getMonth())+"월";
+            next.innerHTML=(today.getMonth()+2)+"월";
+        }
 
 
+        while (tbcal.rows.length > 2)
+        {
+            tbcal.deleteRow(tbcal.rows.length - 1);
+        }
+        var row = null;
+        row = tbcal.insertRow();
+        var cnt = 0;
+
+
+        for (i = 0; i < nMonth.getDay(); i++)
+        {
+            cell = row.insertCell();
+            cnt = cnt + 1;
+        }
+
+
+        for (i = 1; i <= lastDate.getDate(); i++)
+        {
+            cell = row.insertCell();
+            cell.innerHTML = "<font color=#FFFFFF>" +i;
+            cnt = cnt + 1;
+            if (cnt % 7 == 1) {
+                cell.innerHTML = "<font color=#FF9090>" + i
+            }
+            if (cnt % 7 == 0) {
+                cell.innerHTML = "<font color=#7ED5E4>" + i
+                row = calendar.insertRow();
+            }
+            if(today.getFullYear()==date.getFullYear()&&today.getMonth()==date.getMonth()&&i==date.getDate())
+            {
+                cell.bgColor = "color:gray";
+            }
+        }
+
+    }
+
+</script>
+
+</head>
+
+<body onload="build();">
+    <table align="center" id="calendar">
+        <tr>
+            <td><font size=1%; color="#B3B6B3"><label onclick="beforem()" id="before" ></label></font></td>
+            <td colspan="5" align="center" id="yearmonth"></td>
+            <td><font size=1%; color="#B3B6B3"><label onclick="nextm()" id="next"></label></font></td>
+        </tr>
+        <tr>
+            <td align="center"> <font color="#FF9090">일</font></td>
+            <td align="center"><font color=#FFFFFF>월</font></td>
+            <td align="center"><font color=#FFFFFF>화</font></td>
+            <td align="center"><font color=#FFFFFF>수</font></td>
+            <td align="center"><font color=#FFFFFF>목</font></td>
+            <td align="center"><font color=#FFFFFF>금</font></td>
+            <td align="center"><font color=#7ED5E4>토</font></td>
+        </tr>
+    </table></div>
+      </div>
+  </s_sidebar_element>
 
   <p>
     <div id="disqus_thread"></div>
